--- a/Day1/Task1/Dockerfile
+++ b/Day1/Task1/Dockerfile
@@ -1,4 +1,4 @@
-FROM httpd:latest
+FROM nginx:latest
 RUN apt-get -y update && apt-get -y upgrade
 RUN apt-get install -y nano net-tools
-COPY ./Pets /usr/local/apache2/htdocs/
+COPY ./Pets /usr/share/nginx/html/
